# NVI-OBS-Plugin

./: CMakeLists.txt  LICENSE  README.md
nvi/include/NVI/: API.h  Accelerate.h  Base.h  Codec.h  Device.h  Import.h  Meta.h  Network.h  Recv.h  Send.h  Stream.h
nvi/lib/: NVI.lib
src/: main.cpp  nvi-output.cpp  nvi-source.cpp  obs-nvi.h
